--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create ZIP archive
         run: |
           cd wp-content/plugins
-          zip -r ../../iranian-league-table iranian-league-table
+          zip iranian-league-table.zip iranian-league-table
 
       - name: Upload ZIP artifact
         uses: actions/upload-artifact@v4
