--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4gi
+        uses: actions/checkout@v4
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4.3.3
