Feat ignore .DS_Store dir in macoS

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ wp-config.php
 # Table data
 /wp-content/plugins/iranian-league-table/data/*
 !/wp-content/plugins/iranian-league-table/data/index.php
+
+#macOS files
+.DS_Store
